feat:[SSCA-372]: Added upload and download for artifact sbom
